# PBA-Campus-2025-Study-note

./: ADDING_EXAMPLES.md  Cargo.toml  Makefile  README.md
examples/: 01_endianness_conversion.rs  02_scale_compact_encoding.rs  03_scale_enum_encoding.rs
examples/JSON-RPC/: 01_polkadot_header_subscription.rs  README.md
examples/SCALE/: 04_scale_vector_encoding.rs  05_scale_array_encoding.rs
json-rpc-examples/: Cargo.toml
scale-examples/: Cargo.toml
src/: main.rs
