[package]
name = "pba-campus-2025-study-note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "01_endianness_conversion"
path = "examples/01_endianness_conversion.rs"

[[example]]
name = "02_scale_compact_encoding"
path = "examples/02_scale_compact_encoding.rs"

[[example]]
name = "03_scale_enum_encoding"
path = "examples/03_scale_enum_encoding.rs"

[[example]]
name = "04_scale_vector_encoding"
path = "examples/04_scale_vector_encoding.rs"

[[example]]
name = "05_scale_array_encoding"
path = "examples/05_scale_array_encoding.rs"
