[workspace]
resolver = "2"
members = [
    "scale-examples",
    "json-rpc-examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PBA Campus 2025"]
description = "Study notes and examples for Polkadot blockchain development"

[workspace.dependencies]
# Common dependencies that can be shared across workspace members
serde_json = "1.0"
