[package]
name = "json-rpc-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "JSON-RPC examples for Polkadot blockchain development"

[dependencies]
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
blake2 = "0.10"
hex = "0.4"
codec = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }

[[example]]
name = "01_polkadot_header_subscription"
path = "../examples/JSON-RPC/01_polkadot_header_subscription.rs"
